--- a/styles.css
+++ b/styles.css
@@ -74,3 +74,83 @@ h2 {
   font-style: italic;
   margin-top: 0;
 }
+#about h2,
+#offerings h2,
+#gallery h2 {
+  font-weight: 400;
+}
+
+p {
+  margin-bottom: 0;
+}
+
+hr {
+  border: none;
+  border-top: 2px solid var(--champagne-gold);
+  margin: 2rem 0;
+}
+
+.hero {
+  background: var(--midnight-blue);
+  color: var(--soft-white);
+  text-align: center;
+  padding: 1rem;
+}
+
+
+nav {
+  background: var(--champagne-gold);
+}
+
+.nav-links {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.nav-links li {
+  margin: 0 15.5rem;
+}
+
+.nav-links a {
+  display: block;
+  padding: 0.5rem 0;
+  color: var(--midnight-blue);
+  text-decoration: none;
+  font-weight: 600;
+  transition: opacity 0.3s ease;
+}
+
+.nav-links a:hover {
+  opacity: 0.7;
+}
+
+.offerings-grid {
+  display: grid;
+  gap: 1.5rem;
+}
+
+.card {
+  background: var(--olive-green);
+  color: var(--soft-white);
+  padding: 1.5rem;
+  border-radius: 6px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
+}
+
+.card h3 {
+  color: var(--soft-white);
+  margin-bottom: 0.5rem;
+  font-size: 1.5rem;
+  font-weight: 800;
+}
+
+.card ul {
+  margin-top: 0.5rem;
+  padding-left: 1rem;
+}
+
+.card li {
+  list-style: disc;
+  margin-bottom: 0.3rem;
+}
