--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 /* CSS BY Alaina Elsea */
 
-
+/*IMPORTED FONTS*/
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&display=swap');
 
-
+/* CSS RESET*/
 *,
 *::before,
 *::after {
@@ -21,7 +21,7 @@ ul {
   list-style: none;
 }
 
-
+/* ROOT VARIABLES */
 :root {
   --midnight-blue: #1F2A44;
   --olive-green: #76885B;
@@ -30,7 +30,7 @@ ul {
   --dark-charcoal: #2B2B2B;
   --soft-white: #FAF9F6;
 }
-
+/* GLOBAL STYLES (mobile first/small) */
 
 body {
   font-family: 'Playfair Display', serif;
@@ -195,7 +195,7 @@ nav {
   width: 100%;
   margin: 2rem 0;
 }
-
+/* ================= FOOTER ================= */
 footer {
   background: var(--midnight-blue);
   color: var(--soft-white);
@@ -221,20 +221,20 @@ footer p {
   font-weight: 400;
 }
 
-
+/* ================= MEDIA QUERY (medium) ================= */
 @media (min-width: 600px) {
   .offerings-grid {
     grid-template-columns: repeat(2, 1fr);
   }
 }
-
+/* ================= MEDIA QUERY (large) ================= */
 @media (min-width: 900px) {
   .gallery-grid {
     grid-template-columns: repeat(3, 1fr);
   }
 }
 
-
+/* ================= MEDIA QUERY (xl) ================= */
 @media (min-width: 1200px) {
   .container {
     max-width: 1200px;
